   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2014-10-21 11:00 UTC+0100 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
  * source\vm\macro.c
    ! pacify warnings

2014-10-20 21:34 UTC+0100 Patrick Mast <patrick.mast@xharbour.com>
  * source\rtl\winos.prg
    + OS_ISWIN81()

2014-10-14 14:30 UTC-300 Luiz Rafael Culik <luiz/AT/xharbour/com/br>
  * contrib/tipssl/mail.prg
  * source/tip/mail.prg
    ! method attachFile simplified , now all extensions use base64 encoding, with exception of .txt and .html/.htm
  * contrib/tipssl/sendmail.prg
  * source/tip/sendmail.prg
    ! HB_SetMimeType function only return the mimetype
  * source/vm/macro.c
    ! fix hb_macroGetValue to allow >16k string macros
  * source/rtl/cdpapi.c
    ! minor fix on hb_cdpnDup3
  * include/std.ch 
    ! added missing comma to sort command translation since the connection parameter was being passed as rdd position
  * source/cgi/thtm.prg
    ! minor fix on new method when output is file creation  
      

2014-10-10 11:22 UTC+0100 Patrick Mast <patrick.mast@xharbour.com>
  * make_vc
    + Auto detect of Microsoft Visual Studio 12.0 for 64 bits

2014-10-07 19:20 UTC+0100 Enrico Maria Giordano <e.m.giordano@emagsoftware.it>
  * contrib/misc/hb_f.c
    ! more fixes to HB_FGOBOTTOM() function

2014-10-06 23:45 UTC-0430 Ron Pinkas <ron.pinkas/at/xharbour.com>
  + include/cinterface.h
    + New header to define CINTERFACE and genericly workaround missing
      incomplete CINTERFACE support in Windows SDK's guiddef.h and propkeydef.h

  * include/hbole.h
    * Moved CINTERFACE workaround to new cinterface.h
 
  * include/hbatomic.h
  * include/hbdefs.h
  * include/hbstack.h
  * include/inet.h
  * include/thread.h
    * Added #include "cinterface.h" to precede all #include <windows.h>

  * include/hbsetup.h
    * Added latest versions of Visual Studio to the notes

  * contrib/gtwvw/hbgtwvw.h