@@ -91,6 +91,37 @@ static void hb_macroUseAliased( PHB_ITEM, PHB_ITEM, int, BYTE );
  * 'szString' - a string to compile
  * 'iLen' - length of the string to compile
  */
+ 
+static int hb_macroParseEx( PHB_MACRO pMacro )
+{
+   HB_TRACE( HB_TR_DEBUG, ( "hb_macroParse(%p, %s, %i)", pMacro, szString, iLen ) );
+
+   /* update the current status for logical shortcuts */
+   hb_comp_bShortCuts            = pMacro->supported & HB_SM_SHORTCUTS;
+
+   /* initialize the input buffer - it will be scanned by lex */
+
+   pMacro->pos                   = 0;
+   pMacro->bShortCuts            = hb_comp_bShortCuts;
+   pMacro->pError                = NULL;
+
+   /* initialize the output (pcode) buffer - it will be filled by yacc */
+   pMacro->pCodeInfo             = ( PHB_PCODE_INFO ) hb_xgrab( sizeof( HB_PCODE_INFO ) );
+   pMacro->pCodeInfo->lPCodeSize = HB_PCODE_SIZE;
+   pMacro->pCodeInfo->lPCodePos  = 0;
+   pMacro->pCodeInfo->pLocals    = NULL;
+   pMacro->pCodeInfo->pPrev      = NULL;
+
+   pMacro->pCodeInfo->pCode      = ( BYTE * ) hb_xgrab( HB_PCODE_SIZE );
+
+   /* reset the type of compiled expression - this should be filled after
+    * successfully compilation
+    */
+   pMacro->exprType              = HB_ET_NONE;
+
+   return hb_macroYYParse( pMacro );
+}
+ 
 static int hb_macroParse( PHB_MACRO pMacro, char * szString, HB_SIZE iLen )
 {
    HB_TRACE( HB_TR_DEBUG, ( "hb_macroParse(%p, %s, %i)", pMacro, szString, iLen ) );
@@ -138,6 +169,7 @@ void hb_macroDelete( PHB_MACRO pMacro )
       hb_errRelease( pMacro->pError );
    if( pMacro->Flags & HB_MACRO_DEALLOCATE )
    {
+//       hb_xfree( (void*) pMacro );
       hb_xfree( pMacro );
    }
 }
@@ -549,14 +581,19 @@ void hb_macroGetValue( PHB_ITEM pItem, BYTE iContext, BYTE flags )
        * RETURN
        */
 
-      szString                = hb_macroTextSubst( pItem->item.asString.value, &ulLength );
+      
       struMacro.Flags         = HB_MACRO_GEN_PUSH;
       struMacro.uiNameLen     = HB_SYMBOL_NAME_LEN;
       struMacro.status        = HB_MACRO_CONT;
       struMacro.iListElements = 0;
       struMacro.supported     = ( flags & HB_SM_RT_MACRO ) ? s_macroFlags : flags;
-
+      struMacro.length        = pItem->item.asString.length;      
       
+      szString                = hb_macroTextSubst( pItem->item.asString.value, &struMacro.length );      
+      struMacro.string = szString;
+      
+      if( szString == pItem->item.asString.value )
+         szString = NULL;
 
       if( iContext != 0 )
       {
@@ -604,15 +641,15 @@ void hb_macroGetValue( PHB_ITEM pItem, BYTE iContext, BYTE flags )
          ulLength = strlen( szCopy );
       }
 #else
-      bAlloc = TRUE;
-      szCopy = (char*) hb_xgrab( ulLength ) ;  
-      hb_xstrcpy( szCopy, szString, 0 );
+//       bAlloc = TRUE;
+//       szCopy = (char*) hb_xgrab( ulLength ) ;  
+//       hb_xstrcpy( szCopy, szString, 0 );
 #endif
 
-      if( szString != pItem->item.asString.value )
-         hb_xfree( ( void * ) szString );
+//       if( szString != pItem->item.asString.value )
+//          hb_xfree( ( void * ) szString );
 
-      iStatus = hb_macroParse( &struMacro, szCopy, ulLength );
+      iStatus = hb_macroParseEx( &struMacro );
 
       if( ! ( iStatus == HB_MACRO_OK && ( struMacro.status & HB_MACRO_CONT ) ) )
          hb_macroSyntaxError( &struMacro, szCopy );
@@ -626,8 +663,6 @@ void hb_macroGetValue( PHB_ITEM pItem, BYTE iContext, BYTE flags )
          hb_xfree( pOut );
       }
 #endif
-      if ( bAlloc )
-          hb_xfree(szCopy);
 
       hb_stackPop();    /* remove compiled string */
 
@@ -648,6 +683,8 @@ void hb_macroGetValue( PHB_ITEM pItem, BYTE iContext, BYTE flags )
                HB_VM_STACK.iExtraIndex = struMacro.iListElements;
          }
       }
+      if( szString )
+         hb_xfree( szString );
    }
 }
 
